--- a/brace-app/manifest.plist
+++ b/brace-app/manifest.plist
@@ -11,19 +11,19 @@
 						<key>kind</key>
 						<string>software-package</string>
 						<key>url</key>
-						<string>https://drive.google.com/file/d/1Pk5mb8DTzqj80vI1QsBpJ0j5DGnU3JpM/view?usp=sharing</string>
+            <string>https://knutanderss.github.io/brace-app/brace-app/Brace.ipa</string>
 					</dict>
 					<dict>
 						<key>kind</key>
 						<string>display-image</string>
 						<key>url</key>
-						<string>https://drive.google.com/file/d/1ooDDWjarVPYh3Y0SD5LnNSAvU7VFUcHQ/view?usp=sharing</string>
+						<string>https://knutanderss.github.io/brace-app/brace-app/57.png</string>
 					</dict>
 					<dict>
 						<key>kind</key>
 						<string>full-size-image</string>
 						<key>url</key>
-						<string>https://drive.google.com/file/d/1unbpmSUp9EXaZwxmqV8GmF53j4hD-7fK/view?usp=sharing</string>
+						<string>https://knutanderss.github.io/brace-app/brace-app/512.png</string>
 					</dict>
 				</array>
 				<key>metadata</key>
